<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/order_background"
    tools:context=".OrderActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="254dp"
        android:layout_height="189dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/placeOrderText"
        app:layout_constraintStart_toStartOf="@+id/placeOrderText"
        app:layout_constraintTop_toBottomOf="@+id/placeOrderText">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/doubleDoubleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_double_text" />

            <EditText
                android:id="@+id/doubleDoublesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/double_double_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/chesseburgerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cheeseburger_text" />

            <EditText
                android:id="@+id/cheeseburgerValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/cheeseburger_Value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/frenchFriesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/french_fries_text" />

            <EditText
                android:id="@+id/frenchFriesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/french_fries_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/shakesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shakes_text" />

            <EditText
                android:id="@+id/shakesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/shakes_value" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="254dp"
        android:layout_height="136dp"
        app:layout_constraintEnd_toEndOf="@+id/fountainDrinksText"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/fountainDrinksText"
        app:layout_constraintTop_toBottomOf="@+id/fountainDrinksText">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/smallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_text" />

            <EditText
                android:id="@+id/smallValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/small_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_text" />

            <EditText
                android:id="@+id/mediumValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/medium_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/largeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large_text" />

            <EditText
                android:id="@+id/largeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/large_Value" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/placeOrderText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/place_order_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fountainDrinksText"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/fountain_drinks_text"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:onClick="transferTotalMenu"
        android:text="@string/place_order_button"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
</android.support.constraint.ConstraintLayout>