<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summary_background"
    tools:context=".SummaryActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="254dp"
        android:layout_height="78dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/orderTotal"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="@+id/orderTotal"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/itemsOrderedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items_ordered_text" />

            <TextView
                android:id="@+id/itemsOrderedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items_ordered_value" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/subTotalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtotalText" />

            <TextView
                android:id="@+id/subtotalValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subTotalValue" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/taxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax_text" />

            <TextView
                android:id="@+id/taxValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax_value" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/startNewOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:onClick="closeActivity"
        android:text="@string/start_new_order_button"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/orderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="8dp"
        android:text="@string/order_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>